--- a/assets/main.scss
+++ b/assets/main.scss
@@ -37,3 +37,6 @@ $on-laptop:        800px;
 
 // Import partials from the `minima` theme.
 @import "minima";
+
+// Import custom scss
+@import "custom";
