--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -211,6 +211,27 @@
 .post-content {
   margin-bottom: $spacing-unit;
 
+  h1 {
+      font-size: 38px;
+
+      @include media-query($on-laptop) {
+        font-size: 34px;
+      }
+  }
+
+  // h1 이후에 수평선 삽입
+  h1:after {
+      content:' ';
+      display:block;
+      border:2px solid #d0d0d0;
+      border-radius:4px;
+      -webkit-border-radius:4px;
+      -moz-border-radius:4px;
+      box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+      -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+      -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+  }
+
   h2 {
     font-size: 32px;
 
